* index.html: Changed Classpath link.  From Marcus Smith.

--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -23,11 +23,11 @@ Programming Language.  It can compile:
 <li>and Java bytecode to native machine code.
 </ul>
 
-Compiled applications are linked with the GCJ runtime, <code>libgcj</code>, 
-which provides the core <A HREF="http://www.gnu.org/software/classpath/">
-class libraries</A>, a garbage collector, and a bytecode
-interpreter. <code>libgcj</code> can dynamically load and interpret 
-class files, resulting in mixed compiled/interpreted applications.
+Compiled applications are linked with the GCJ runtime,
+<code>libgcj</code>, which provides the core class libraries, a
+garbage collector, and a bytecode interpreter. <code>libgcj</code> can
+dynamically load and interpret class files, resulting in mixed
+compiled/interpreted applications.
 
 <p>
 
@@ -53,6 +53,8 @@ cross-compiler, suitable for embedded systems programming.
 GCJ is part of the GNU Compiler Collection (<A HREF="../">GCC</A>). GCC, 
 GDB and related tools are 
 <a href="http://www.gnu.org/philosophy/free-sw.html">Free Software</a>.  
+libgcj is slowly being merged with <a
+href="http://www.gnu.org/software/classpath/">GNU Classpath</a>.
 <br>
 <br>
 
