* contrib.html, done.html, libgcj-platforms.html, old-news.html: 	Use absolute reference for mailing list URLs.

--- a/htdocs/java/contrib.html
+++ b/htdocs/java/contrib.html
@@ -101,7 +101,7 @@ projects</a>.
 
     <p>Send <tt>libgcj</tt>patches to <a
 	href="mailto:java-patches@gcc.gnu.org">the patch mailing
-	list</a>.  This list is <a href="/ml/java-patches/">archived</a>.
+	list</a>.  This list is <a href="http://gcc.gnu.org/ml/java-patches/">archived</a>.
     <p>Patches to the gcj front end -- the <tt>gcc/java</tt> directory --
        should be sent to <a href="mailto:gcc-patches@gcc.gnu.org">the gcc
        patch mailing list</a>.  See <a
