--- a/htdocs/java/done.html
+++ b/htdocs/java/done.html
@@ -38,7 +38,7 @@
 
 	<td>The <A HREF="http://www.mmsi.com/modular/trucks/index.html">
 	    Autonomous Truck Page</A>.
-	    <A HREF="/ml/java/2000-06/msg00086.html">
+	    <A HREF="http://gcc.gnu.org/ml/java/2000-06/msg00086.html">
 	    Entry</A> submitted by <A HREF="mailto:olson@mmsi.com">Jon
 	    Olson</A>.
 	</td>
@@ -60,7 +60,7 @@
 
 	<td>The <A HREF="http://jusb.sourceforge.net">jUSB</A>
 	     page. The <A HREF="http://jphoto.sourceforge.net">JPhoto</A>
-	     page.  <A HREF="/ml/java/2000-11/msg00112.html">Entry</A>
+	     page.  <A HREF="http://gcc.gnu.org/ml/java/2000-11/msg00112.html">Entry</A>
 	     submitted by <A HREF="mailto:david-b@pacbell.net">David
 	     Brownell</A>.
 	</td>
@@ -104,7 +104,7 @@
 	    performance gains over Kaffe's jit3 were witnessed.
 	 </td>
 	 <td><A HREF="http://www.swarm.org">Swarm</A>. 
-	     <A HREF="/ml/java/2000-06/msg00084.html">Entry</A> 
+	     <A HREF="http://gcc.gnu.org/ml/java/2000-06/msg00084.html">Entry</A> 
 	     submitted by <A HREF="mailto:mgd@swarm.org">Marcus G. Daniel</A>.
 	 </td>
       </tr>
@@ -124,7 +124,7 @@
 	</td>
 	<td>The <A
 	    HREF="http://resam.univ-lyon1.fr/~tamanoir">Tamanoir</A>
-	    page. <A HREF="/ml/java/2001-01/msg00069.html">
+	    page. <A HREF="http://gcc.gnu.org/ml/java/2001-01/msg00069.html">
 	    Entry</A> submitted by <A HREF="jpgelas@lhpcm.univ-lyon1.fr">
 	    Jean Patrick Gelas</A>.
       </tr>
@@ -146,7 +146,7 @@
 	</td>
 	<td>The <A
 	    HREF="http://www.dfc.icai.upco.es/balrog/adfc.html">ADFC</A>
-	    page. <A HREF="/ml/java/2001-01/msg00228.html">
+	    page. <A HREF="http://gcc.gnu.org/ml/java/2001-01/msg00228.html">
 	    Entry</A> submitted by <A HREF="mailto:balrog@amena.com">
 	    Alejandro Rodríguez Gallego</A>.
       </tr>
