--- a/htdocs/java/libgcj-platforms.html
+++ b/htdocs/java/libgcj-platforms.html
@@ -221,7 +221,7 @@ list; this can happen concurrently with the checkin.
 gcc-patches).  The 
 <a href="/java/">web page has subscription info</a>,
 as well as a
-<a href="/ml/java-patches/">
+<a href="http://gcc.gnu.org/ml/java-patches/">
 link to the archives</a>.
 
 <p>The
