--- a/htdocs/java/old-news.html
+++ b/htdocs/java/old-news.html
@@ -65,7 +65,7 @@ of the <A HREF="http://sources.redhat.com/mauve/download.html">Mauve source</A>.
 </td><td>
 The various gcj mailing lists have moved to gcc.gnu.org.
 Unused lists have been removed, and java-discuss was renamed
-to java.  See <a href="/ml/java/2001-01/msg00539.html">the announcement</a>
+to java.  See <a href="http://gcc.gnu.org/ml/java/2001-01/msg00539.html">the announcement</a>
 for all the gory details.  With this change, the gcj project
 is now fully merged into GCC.
 </td></tr>
@@ -95,7 +95,7 @@ Thanks to Richard Henderson's recent <code>libffi</code> changes, the
 <tr><td valign="top">
 <b>December 9, 2000</b>
 </td><td>
-The libgcj sources have <A HREF="/ml/java/2000-12/msg00102.html">
+The libgcj sources have <A HREF="http://gcc.gnu.org/ml/java/2000-12/msg00102.html">
 migrated</A> to the gcc repository. We've imported
 <A HREF="http://sourceforge.net/projects/fastjar">fastjar</A> in our
 <A HREF="http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/fastjar/">tree</A>
@@ -104,9 +104,9 @@ and use it as a replacement to zip.  </td></tr>
 <tr><td valign="top">
 <b>December 8, 2000</b>
 </td><td>
-The libgcj repository is now <A HREF="/ml/java/2000-12/msg00095.html">
+The libgcj repository is now <A HREF="http://gcc.gnu.org/ml/java/2000-12/msg00095.html">
 closed</A>: We're moving our sources over to the gcc
-<A HREF="/ml/java-announce/2000/msg00003.html">
+<A HREF="http://gcc.gnu.org/ml/java-announce/2000/msg00003.html">
 tree</A>. Read <A HREF="http://gcc.gnu.org/cvs.html">here</A> and 
 <A HREF="http://gcc.gnu.org/cvswrite.html">here</A> how you will soon check
 your sources out.
@@ -155,7 +155,7 @@ also been working on AWT.
 Bryce McKinlay checked in a patch that enables bitmap-descriptor based 
 marking in the garbage collector. This code includes work by
 Tom Tromey and Hans Boehm, and results in some significant 
-<A HREF="http://sources.redhat.com/ml/java-patches/2000-q3/msg00161.html">
+<A HREF="http://gcc.gnu.org/ml/java-patches/2000-q3/msg00161.html">
 performance gains</A> in memory-intensive code.
 </td></tr>
 
@@ -252,7 +252,7 @@ Tom Tromey wrote most of <code>java.awt.event</code>.
 Anthony Green made
 <a href="ftp://sources.redhat.com/pub/java/rpm/">RPMs</a>
 of gcj and libgcj.  See his original
-<a href="http://sources.redhat.com/ml/java/2000-04/msg00022.html">message</a> for some caveats.
+<a href="http://gcc.gnu.org/ml/java/2000-04/msg00022.html">message</a> for some caveats.
 </td></tr>
 
 <tr><td valign="top">
@@ -347,7 +347,7 @@ bug fixes and more minor enhancements.
 <tr><td valign="top">
 <b>August 26, 1999</b>
 </td><td>
-<a href="/ml/java-announce/1999/msg00005.html">Libgcj 2.95.1 is released</a>!  This version corresponds to the GCC 2.95.1 release.
+<a href="http://gcc.gnu.org/ml/java-announce/1999/msg00005.html">Libgcj 2.95.1 is released</a>!  This version corresponds to the GCC 2.95.1 release.
 </td></tr>
 </table>
 
