--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -75,6 +75,11 @@
 </tr>
 
 <tr>
+<td>m68k-apple-netbsd1.5.1</td>
+<td>Successful</td>
+</tr>
+
+<tr>
 <td>mips-sgi-irix6.5</td>
 <td>Successful</td>
 </tr>
