--- a/htdocs/gcc-2.95/buildstat.html
+++ b/htdocs/gcc-2.95/buildstat.html
@@ -148,6 +148,9 @@ Successful
 <p><b>i686-pc-linux-gnulibc1</b><br>
 Successful
 
+<p><b>m68k-apple-netbsd1.5.1</b><br>
+Successful
+
 <p><b>mips-dec-ultrix4.4</b><br>
 Successful
 
