--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -30,6 +30,11 @@
 </tr>
 
 <tr>
+<td>hppa1.1-hp-hpux10.20</td>
+<td>Successful</td>
+</tr>
+
+<tr>
 <td>hppa2.0-hp-hpux10.20</td>
 <td>Successful</td>
 </tr>
@@ -91,6 +96,11 @@
 
 <tr>
 <td>sparc-sun-solaris2.5.1</td>
+<td>Successful</td>
+</tr>
+
+<tr>
+<td>sparc-sun-solaris2.6</td>
 <td>Successful</td>
 </tr>
 
