Announce the move of the gcc.gnu.org machine.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -155,6 +155,14 @@ scheduled for August</a>.
 
 <dl>
 
+<dt><b>August 16, 2001</b></dt>
+<dd>
+The gcc.gnu.org machine will be moving to a new physical location with
+significantly improved bandwidth and backup on Saturday, August 18th.
+The move is expected to take less than two hours; DNS will be adjusted
+accordingly, the new IP address will be 209.249.29.67.
+</dd>
+
 <dt><b>July 17, 2001</b></dt>
 <dd>
 The <a href="steering.html">Steering Committee</a> adopted a
