--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -25,6 +25,11 @@
 </tr>
 
 <tr>
+<td>alphaev56-unknown-linux-gnu</td>
+<td>Successful</td>
+</tr>
+
+<tr>
 <td>alphaev67-dec-osf5.1</td>
 <td>Successful</td>
 </tr>
