--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -10,6 +10,11 @@
 <table>
 
 <tr>
+<td>alpha-dec-osf4.0d</td>
+<td>Successful</td>
+</tr>
+
+<tr>
 <td>alpha-dec-osf5.1</td>
 <td>Successful</td>
 </tr>
@@ -81,6 +86,11 @@
 
 <tr>
 <td>i686-pc-linux-gnu</td>
+<td>Successful</td>
+</tr>
+
+<tr>
+<td>mips-sgi-irix6.2</td>
 <td>Successful</td>
 </tr>
 
