GCC 3.0.1 has been released.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -137,9 +137,8 @@ GNU/Linux) and cross targets and use an extensive
 <a href="http://gcc.gnu.org/testresults/">test suite</a> as well as
 <a href="benchmarks/">various benchmark suites
 and automated testers</a> to maintain and improve quality.
-<a href="gcc-3.0/gcc-3.0.html">GCC 3.0</a> is the current release,
-<a href="http://gcc.gnu.org/ml/gcc/2001-07/msg01491.html">GCC 3.0.1 is
-scheduled for August</a>.
+<a href="gcc-3.0/gcc-3.0.html">GCC 3.0.1</a> is the current release,
+GCC 3.0.2 is scheduled for October</a>.
 </p>
 
 <hr>
@@ -154,6 +153,11 @@ scheduled for August</a>.
 <h2>News/Announcements</h2>
 
 <dl>
+
+<dt><b>August 20, 2001</b></dt>
+<dd>
+GCC 3.0.1 has been released.
+</dd>
 
 <dt><b>August 16, 2001</b></dt>
 <dd>
