Document when gcc.gnu.org and www.gnu.org, respectively, are updated.

--- a/htdocs/about.html
+++ b/htdocs/about.html
@@ -14,6 +14,10 @@ contributors</a>.
 The web effort is coordinated by Jeff Law and Gerald Pfeifer, but again,
 there are <em>lots</em> of people who contribute.</p>
 
+<p>The pages on gcc.gnu.org are updated "life" (that is, directly after
+a change has been made); www.gnu.org is updated once a day at 4:00 -0700
+(PDT).</p>
+
 <p>Please send feedback, problem reports and patches to our
 <a href="lists.html">mailing lists</a>.
 </p>
