Add s390-linux-gnu, with a note that it is supported in 3.0.1, not 3.0.

--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -7,6 +7,8 @@
 <body>
 <h1 align="center">Build status for GCC 3.0</h1>
 
+<p>This list covers GCC 3.0 and all 3.0.x releases.</p>
+
 <table>
 
 <tr>
@@ -107,6 +109,11 @@
 <tr>
 <td>powerpc-unknown-linux-gnu</td>
 <td>Successful</td>
+</tr>
+
+<tr>
+<td>s390-linux-gnu</td>
+<td>Successful (beginning with 3.0.1; not supported in 3.0)</td>
 </tr>
 
 <tr>
