Update for GCC 3.0.1

--- a/htdocs/gcc-3.0/gcc-3.0.html
+++ b/htdocs/gcc-3.0/gcc-3.0.html
@@ -1,25 +1,26 @@
 <html>
 
 <head>
-<title>GCC 3.0</title>
+<title>GCC 3.0.1</title>
 </head>
 
 <body>
 
-<h1 align="center">GCC 3.0</h1>
+<h1 align="center">GCC 3.0.1</h1>
 
-<p>June 18, 2001</p>
+<p>August 20, 2001</p>
 
 <p>The <a href="http://www.gnu.org/">GNU project</a> and the GCC
-developers are pleased to announce the release of GCC version 3.0.</p>
+developers are pleased to announce the release of GCC version 3.0.1.</p>
 
 <p>GCC used to stand for the GNU C Compiler, but since the compiler
 supports several other languages aside from C, it now stands for the
 GNU Compiler Collection.</p>
 
-<p>GCC 3.0 has several new optimizations, new targets, new languages
-and many other new features.  See the <a href="features.html">new
-features</a> page for a more complete list.</p>
+<p>GCC 3.0.x has several new optimizations, new targets, new languages
+and many other new features, relative to GCC 2.95.x.  See the <a
+href="features.html">new features</a> page for a more complete
+list.</p>
 
 <p>A list of <a href="buildstat.html">successful builds</a> is updated
 as new information becomes available.</p>
@@ -30,7 +31,7 @@ have contributed new features, test results, bugfixes, etc to GCC.  This
 is what makes GCC successful.</p>
 
 <p>And finally, we can't in good conscience fail to mention some
-<a href="caveats.html">caveats</a> to using GCC 3.0.</p>
+<a href="caveats.html">caveats</a> to using GCC 3.0.x.</p>
 
 <p>For additional information about GCC please refer to the
 <a href="../index.html">GCC project web site</a> or contact the
