Mention all GCC 3.0.x releases (and their corresponding changes).

--- a/htdocs/gcc-3.0/features.html
+++ b/htdocs/gcc-3.0/features.html
@@ -144,6 +144,16 @@
   </ul></li>
   <li>Plus a great many bugfixes and almost all the <a
   href="../gcc-2.95/features.html">features found in GCC 2.95</a>.</li>
+
+  <li>Additional changes in GCC 3.0.1
+  <ul>
+    <li>C++ fixes for incorrect code-generation.</li>
+    <li>Improved cross-compiling support for the C++ standard library.</li>
+    <li>Fixes for some embedded targets that worked in GCC 2.95.3, but
+        not in GCC 3.0.</li>
+    <li>Fixes for various exception-handling bugs.</li>
+    <li>A port to the S/390 architecture.</li>
+  </ul></li>
 </ul>
 
 </body>
