--- a/htdocs/gcc-3.0/gcc-3.0.html
+++ b/htdocs/gcc-3.0/gcc-3.0.html
@@ -11,7 +11,10 @@
 <p>August 20, 2001</p>
 
 <p>The <a href="http://www.gnu.org/">GNU project</a> and the GCC
-developers are pleased to announce the release of GCC version 3.0.1.</p>
+developers are pleased to announce the release of GCC 3.0.1,
+which is a bug-fix release following
+GCC 3.0 released on June 18, 2001.
+</p>
 
 <p>GCC used to stand for the GNU C Compiler, but since the compiler
 supports several other languages aside from C, it now stands for the
