Add some comments, user lowser-case markup. Rotate news.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -6,11 +6,11 @@
 
 <body>
 
-<TABLE BORDER="0" CELLSPACING="0" CELLPADDING="2">
-<TR>
+<table border="0" cellspacing="0" cellpadding="2">
+<tr>
 
-<TD VALIGN="TOP">
-<TABLE BORDER="0" CELLSPACING="0" CELLPADDING="2" WIDTH="1%">
+<td valign="TOP">                                         <!-- left frame -->
+<table border="0" cellspacing="0" cellpadding="2" width="1%">
 
 <TR><TD><TABLE CELLSPACING="0" WIDTH="100%">
 <TR BGCOLOR="#FFEE99"><TD>
@@ -104,12 +104,12 @@
 </TD></TR>
 </TABLE></TD></TR>
 
-</TABLE>
-</TD>
+</table>
+</td>                                              <!-- end of left frame -->
 
-<TD BGCOLOR="white" VALIGN="top" WIDTH="99%">
+<td bgcolor="white" valign="top" width="99%">            <!-- right frame -->
 
-<IMG SRC="gcc.jpg" ALT="" ALIGN="RIGHT">
+<img src="gcc.jpg" alt="" align="right">
 
 <h2>Welcome to the GCC home page!</h2>
 
@@ -245,9 +245,10 @@ architecture.
 <a href="news.html">Older news and announcements...</a>
 <br><a href="http://gcc.gnu.org/onlinedocs/g77_news.html">Fortran news</a>
 
-</TD>
-</TR>
-</TABLE>
+</td>                                             <!-- end of right frame -->
+
+</tr>
+</table>
 
 <!--#include virtual="/searchbox.ihtml"-->
 
