--- a/htdocs/news.html
+++ b/htdocs/news.html
@@ -12,6 +12,20 @@ home page</a>.
 
 <dl>
 
+<dt><b>December 19, 2000</b></dt>
+<dd>
+The runtime library for the <a href="java/">
+Java front-end</a>, <code>libgcj</code>, has been moved into the GCC 
+tree. This means that a separate download will no longer be required for 
+Java support.
+</dd>
+
+<dt><b>December 4, 2000</b></dt>
+<dd>
+Nick Clifton of Red Hat has donated support for the Intel XScale
+architecture.
+</dd>
+
 <dt><b>November 26, 2000</b></dt>
 <dd>
 The C, C++ and Objective C front ends now use the integrated
