Remove broken link to gcc-3.0/branch.html.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -222,8 +222,8 @@ implementation.
 
 <dt><b>January 15, 2001</b></dt>
 <dd>
-The GCC development tree is in a slush state, with the goal of <a
-href="gcc-3.0/branch.html">stabilization for branching for GCC 3.0</a>.
+The GCC development tree is in a slush state, with the goal of
+stabilization for branching for GCC 3.0.
 </dd>
 
 </dl>
