Add announcement about stormy16 port

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -154,6 +154,12 @@ GCC 3.0.2 is scheduled for October</a>.
 
 <dl>
 
+<dt><b>August 25, 2001</b></dt>
+<dd>
+Geoffrey Keating of Red Hat has donated support for Sanyo's Stormy16
+CPU core.
+</dd>
+
 <dt><b>August 20, 2001</b></dt>
 <dd>
 GCC 3.0.1 has been released.
