* index.html: Mention RMI.

--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -68,6 +68,16 @@ href="http://www.gnu.org/software/classpath/">GNU Classpath</a>.
 
 <table>
 <tr><td valign="top">
+<b>August 27, 2001</b>
+</td><td>
+Tom Tromey has imported an RMI implementation into libgcj.  RMI was
+implemented and donated to the Free Software Foundation by
+Transvirtual Technologies; many thanks to them for their important
+contribution.
+</td></tr>
+
+<table>
+<tr><td valign="top">
 <b>June 18, 2001</b>
 </td><td>
 <B>GCC 3.0 has been released!</B> Everything you need to build and run GCJ is now 
