Redundancy is bad is bad. Simplify.

--- a/htdocs/releases.html
+++ b/htdocs/releases.html
@@ -49,6 +49,8 @@ number is maintained.</p>
 <tr><td><a href="egcs-1.1/egcs-1.1.html">EGCS 1.1.0</a></td><td>2.91.57</td><td>September 3, 1998</td></tr>
 <tr><td><a href="egcs-1.0/egcs-1.0.3.html">EGCS 1.0.3</a></td><td>2.90.29</td><td>May 15, 1998</td></tr>
 <tr><td><a href="egcs-1.0/egcs-1.0.2.html">EGCS 1.0.2</a></td><td>2.90.27</td><td>March 16, 1998</td></tr>
+<tr><td>gcc 2.8.1</td><td>2.8.1</td><td>March 2, 1998</td></tr>
+<tr><td>gcc 2.8.0</td><td>2.8.0</td><td>January 7, 1998</td></tr>
 <tr><td><a href="egcs-1.0/egcs-1.0.1.html">EGCS 1.0.1</a></td><td>2.90.23</td><td>January 6, 1998</td></tr>
 <tr><td><a href="egcs-1.0/egcs-1.0.html">EGCS 1.0</a></td><td>2.90.21</td><td>December 3, 1997</td></tr>
 
@@ -56,30 +58,10 @@ number is maintained.</p>
 
 <h2><a name="historical">Historical</a></h2>
 
-<p>If you have evidence for a missing release date, please send it in.
-Numbers in parentheses are EGCS release numbers.</p>
+<p>If you have evidence for a missing release date, please send it in.</p>
 
 <table border=1 cellspacing=0 cellpadding=5>
 <tr><th>GCC Version</th><th>Release date</th></tr>
-
-<tr><td>3.0.1</td> <td>August 20, 2001</td></tr>
-<tr><td>3.0</td> <td>June 18, 2001</td></tr>
-
-<tr><td>2.95.3</td> <td>March 16, 2001</td></tr>
-<tr><td>2.95.2</td> <td>October 24, 1999</td></tr>
-<tr><td>2.95.1</td> <td>August 19, 1999</td></tr>
-<tr><td>2.95</td>   <td>July 31, 1999</td></tr>
-
-<tr><td>2.91.66 (1.1.2)</td><td>March 15, 1999</td></tr>
-<tr><td>2.91.60 (1.1.1)</td><td>December 1, 1998</td></tr>
-<tr><td>2.91.57 (1.1.0)</td><td>September 3, 1998</td></tr>
-<tr><td>2.90.29 (1.0.3)</td><td>May 15, 1998</td></tr>
-<tr><td>2.90.27 (1.0.2)</td><td>March 16, 1998</td></tr>
-<tr><td>2.90.23 (1.0.1)</td><td>January 6, 1998</td></tr>
-<tr><td>2.90.21 (1.0.0)</td><td>December 3, 1997</td></tr>
-
-<tr><td>2.8.1</td><td>March 2, 1998</td></tr>
-<tr><td>2.8.0</td><td>January 7, 1998</td></tr>
 
 <tr><td>2.7.2.3</td><td>August 22, 1997</td></tr>
 <tr><td>2.7.2.2</td><td>January 29, 1997</td></tr>
