Add more entries to the release checklist.  Update cvs.html and onlinedocs/index.html for 3.0.1.

--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -116,6 +116,7 @@ you may want to check out include:
 <ul>
   <li>gcc_latest_snapshot</li>
   <li>gcc_ss_yyyymmdd</li>
+  <li>gcc_3_0_1_release</li>
   <li>gcc_3_0_release</li>
   <li>gcc-3_0-branch</li>
   <li>gcc-2_95_3</li>
