--- a/htdocs/releasing.html
+++ b/htdocs/releasing.html
@@ -8,11 +8,28 @@
 <h1 align="center">Rolling a GCC Release</h1>
 
 <ol>
+<li>Before rolling the release, update the release notes web pages and
+ensure that they are all listed in <code>contrib/gennews</code>.</li>
+<li>For a new major release, ensure that the build status page is
+present.</li>
 <li>Update the <code>releases.html</code> web page.</li>
 <li>Update the version numbers of the current and future releases on
 the main web page, and add a proper news item there as well.</li>
+<li>Generate online documentation for the new release with
+<code>update_web_docs</code> and link to it from
+<code>onlinedocs/index.html</code> (but don't break URLs to
+documentation for previous releases even if you remove the links to
+it).</li>
+<li>Add the release tag to the list in <code>cvs.html</code> (the
+branch tag should already be there).</li>
+<li>Update <code>~ftp/pub/gcc/README</code> and
+<code>~ftp/pub/gcc/releases/index.html</code>.</li>
 <li>Announce the release the gcc-announce@gcc.gnu.org and gcc@gcc.gnu.org
 mailing lists.</li>
+<li>Increment the version numbers in the <code>[vV]version.c</code>
+files and make them include the date and <code>(prerelease)</code>
+instead of saying <code>(release)</code> and the old release version,
+before allowing any new checkins to the branch.</li>
 </ol>
 
 </body>
