--- a/htdocs/onlinedocs/index.html
+++ b/htdocs/onlinedocs/index.html
@@ -16,6 +16,25 @@
      versions.  -->
 
 <ul>
+  <li>GCC 3.0.1 manuals:
+  <ul>
+    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.0.1/gcc.html">GCC
+         3.0.1 Manual</a> (<a
+         href="http://gcc.gnu.org/onlinedocs/gcc-3.0.1/gcc.ps">also
+         in PostScript</a>)</li>
+    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.0.1/g77.html">G77
+         0.5.26 (GCC 3.0.1) Manual</a> (<a
+         href="http://gcc.gnu.org/onlinedocs/gcc-3.0.1/g77.ps">also
+         in PostScript</a>)</li>
+    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.0.1/gcj.html">GCC
+         3.0.1 GCJ Manual</a> (<a
+         href="http://gcc.gnu.org/onlinedocs/gcc-3.0.1/gcj.ps">also
+         in PostScript</a>)</li>
+    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.0.1/cpp.html">GCC
+         3.0.1 CPP Manual</a> (<a
+         href="http://gcc.gnu.org/onlinedocs/gcc-3.0.1/cpp.ps">also
+         in PostScript</a>)</li>
+  </ul></li>
   <li>GCC 3.0 manuals:
   <ul>
     <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.0/gcc.html">GCC
