Add MIPS16 reference.

--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -182,6 +182,10 @@ tahoe. These are listed here just for completeness.
   <ul>
     <li><a href="http://www.mips.com/publications/index.html">
 	http://www.mips.com/publications/index.html</a>
+    <li><a href="http://www.necel.com/home.nsf/ViewAttachments/U13569EJ4V1UM00/$file/U13569EJ4V1UM00.pdf">
+        MIPS16 information from the Vr4121</a> Documentation.
+    <li><a href="http://www.necel.com/web/products/Microprocessors/index.html">
+    Various MIPS implementations</a> from NEC.
   </ul>
 
  <li>mn10200
