--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -138,7 +138,7 @@ GNU/Linux) and cross targets and use an extensive
 <a href="benchmarks/">various benchmark suites
 and automated testers</a> to maintain and improve quality.
 <a href="gcc-3.0/gcc-3.0.html">GCC 3.0.1</a> is the current release,
-GCC 3.0.2 is scheduled for October</a>.
+GCC 3.0.2 is scheduled for October.
 </p>
 
 <hr>
@@ -153,6 +153,13 @@ GCC 3.0.2 is scheduled for October</a>.
 <h2>News/Announcements</h2>
 
 <dl>
+
+<dt><b>August 29, 2001</b></dt>
+<dd>
+Jan Hubicka, SuSE Labs, together with Richard Henderson, Red Hat, and
+Andreas Jaeger, SuSE Labs, has contributed <a
+href="news/profiledriven.html">infrastructure for profile driven optimizations</a>.
+</dd>
 
 <dt><b>August 25, 2001</b></dt>
 <dd>
