--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -117,6 +117,11 @@
 </tr>
 
 <tr>
+<td>sparc-linux-gnu</td>
+<td>Successful</td>
+</tr>
+
+<tr>
 <td>sparc-sun-solaris2.5.1</td>
 <td>Successful</td>
 </tr>
