Update profile-directed block ordering section with reference to news document about Jan Hubicka's work.

--- a/htdocs/projects/ia64.html
+++ b/htdocs/projects/ia64.html
@@ -130,18 +130,12 @@ branch elimination and branch prediction.</p>
 and for if-conversion to decide which side of the branch should be
 predicated.  It could also be used for delay slots.</p>
 
-<p>Tasks:
-<ul>
-<li>Make sure it works.</li>
-<li>Add tests to make sure it continues to work.</li>
-<li>Improve the documentation.</li>
-<li>Run various benchmarks.</li>
-<li>Investigate cases where profile-directed block ordering causes
-performance to decrease.</li>
-<li>Try it on the Linux kernel and discuss the information.</li>
-</ul>
-<p>Janis Johnson is working on this and welcomes help, particularly
-in analyzing (and then fixing) cases where performance decreases.
+<p>Jan Hubicka, together with Richard Henderson and Andreas Jaeger,
+has contributed
+<a href="http://gcc.gnu.org/news/profiledriven.html">infrastructure for
+profile driven optimizations</a>,
+including improvements to profile-directed block ordering and
+static block ordering.  The description lists items for future work.
 </p>
 
 <li>Code locality: static function ordering
