--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -134,6 +134,7 @@ you may want to check out include:
   <li>egcs_1_0_release</li>
   <li>egcs_ss_yyyymmdd	For snapshots prior to 19990913</li>
   <li>gnu-win32-b20-branch</li>
+  <li>dfa-branch</li>
 </ul>
 
 
