2001-08-30  Vladimir Makarov  <vmakarov@toke.toronto.redhat.com>
	* cvs.html (dfa-branch): Add comment about the branch.

--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -134,7 +134,8 @@ you may want to check out include:
   <li>egcs_1_0_release</li>
   <li>egcs_ss_yyyymmdd	For snapshots prior to 19990913</li>
   <li>gnu-win32-b20-branch</li>
-  <li>dfa-branch</li>
+  <li>dfa-branch.  This branch contains the insn scheduler with an automaton
+      based pipeline hazard recognizer.  </li>
 </ul>
 
 
