Rename gcc-3.0/gcc-3.0.html to gcc-3.0/index.html and provide a redirect. Update the page to cover both 3.0 and 3.0.1, and change several links to that page.

--- a/htdocs/gcc-3.0/index.html
+++ b/htdocs/gcc-3.0/index.html
@@ -6,6 +6,10 @@
 
 <body>
 
+<p>June 18, 2001: GCC 3.0 has been released.</p>
+
+<hr>
+
 <h1 align="center">GCC 3.0.1</h1>
 
 <p>August 20, 2001</p>
