--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -137,7 +137,7 @@ GNU/Linux) and cross targets and use an extensive
 <a href="http://gcc.gnu.org/testresults/">test suite</a> as well as
 <a href="benchmarks/">various benchmark suites
 and automated testers</a> to maintain and improve quality.
-<a href="gcc-3.0/gcc-3.0.html">GCC 3.0.1</a> is the current release,
+<a href="gcc-3.0/">GCC 3.0.1</a> is the current release,
 GCC 3.0.2 is scheduled for October.
 </p>
 
@@ -196,7 +196,7 @@ optimization pass.
 
 <dt><b>June 18, 2001</b></dt>
 <dd>
-<a href="gcc-3.0/gcc-3.0.html">GCC 3.0</a> has been released.
+<a href="gcc-3.0/">GCC 3.0</a> has been released.
 </dd>
 
 <dt><b>March 16, 2001</b></dt>
