--- a/htdocs/releases.html
+++ b/htdocs/releases.html
@@ -36,8 +36,8 @@ number is maintained.</p>
 <table border=1 cellspacing=0 cellpadding=5>
 <tr><th>Release Name</th><th>Version number</th><th>Release date</th></tr>
 
-<tr><td><a href="gcc-3.0/gcc-3.0.html">GCC 3.0.1</a></td><td>3.0.1</td> <td>August 20, 2001</td></tr>
-<tr><td><a href="gcc-3.0/gcc-3.0.html">GCC 3.0</a></td><td>3.0</td> <td>June 18, 2001</td></tr>
+<tr><td><a href="gcc-3.0/">GCC 3.0.1</a></td><td>3.0.1</td> <td>August 20, 2001</td></tr>
+<tr><td><a href="gcc-3.0/">GCC 3.0</a></td><td>3.0</td> <td>June 18, 2001</td></tr>
 
 <tr><td><a href="gcc-2.95/gcc-2.95.3.html">GCC 2.95.3</a></td><td>2.95.3</td> <td>March 16, 2001</td></tr>
 <tr><td><a href="gcc-2.95/gcc-2.95.2.html">GCC 2.95.2</a></td><td>2.95.2</td> <td>October 24, 1999</td></tr>
