Absolutely link to gcc.gnu.org where required (and only there).

--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -355,7 +355,8 @@ may have to take one of the following actions to arrange that GCC uses
 the GNU versions of those programs.</p>
 
 <p>To ensure that GCC finds the GNU assembler (the GNU loader), which
-are required by <a href="install/specific.html">some configurations</A>,
+are required by <a href="http://gcc.gnu.org/install/specific.html">some
+configurations</A>,
 you should configure these with the same --prefix option as you used
 for GCC.  Then build &amp; install GNU as (GNU ld) and proceed with
 building GCC.</p>
