--- a/htdocs/onlinedocs/index.html
+++ b/htdocs/onlinedocs/index.html
@@ -110,7 +110,7 @@ development</EM>.  Some information may not be applicable to any
 existing release.</p>
 
 <ul>
-  <li><a href="../install/index.html">GCC Installation Instructions</a></li>
+  <li><a href="http://gcc.gnu.org/install/">GCC Installation Instructions</a></li>
   <li><a href="http://gcc.gnu.org/onlinedocs/gcc.html">GCC Manual</a> (<a
          href="http://gcc.gnu.org/onlinedocs/gcc.ps">also in
          PostScript</a>)</li>
