--- a/htdocs/projects/beginner.html
+++ b/htdocs/projects/beginner.html
@@ -22,11 +22,9 @@ you have <em>no</em> programming skills, we can still use your help
 with documentation or the bug database.  See below.</p>
 
 <p>We assume that you already know how to <a href="../cvs.html">get the
-latest sources</a>, <a href="../install/configure.html">configure</a> and
-<a href="../install/build.html">build</a> the compiler, and <a
-href="../install/test.html">run the test suite</a>.  You should also
-familiarize yourself with the <a href="../contribute.html">requirements
-for contributions</a> to GCC.</p>
+latest sources</a>, configure and build the compiler, and run the test
+suite.  You should also familiarize yourself with the
+<a href="../contribute.html">requirements for contributions</a> to GCC.</p>
 
 <p>Many of these projects will require at least a reading knowledge of
 GCC's intermediate language, <a href="http://gcc.gnu.org/onlinedocs/gcc_19.html">RTL</a>.
