--- a/htdocs/releases.html
+++ b/htdocs/releases.html
@@ -21,7 +21,8 @@ machine.</em>  If you don't already have a compiler, you need pre-compiled
 binaries.
 
 <p>To find pre-compiled binaries for various platforms, please
-refer to our <a href="install/binaries.html">binaries page</a>.</p>
+refer to our <a href="http://gcc.gnu.org/install/binaries.html">binaries
+page</a>.</p>
 
 <h2><a name="timeline">Timeline</a></h2>
 
