* faq.html: Mention RMI. 	* index.html: Updated RMI announcement; don't claim that RMI is 	unsupported.

--- a/htdocs/java/faq.html
+++ b/htdocs/java/faq.html
@@ -298,36 +298,11 @@ $ gij HelloWorld
       </dl>
       <h3><a name="2_6">2.6 </a>What support is there for RMI?</h3>
       <dl> 
-        <dd> There is no RMI support at the moment. <a href="mailto:mdw@cs.berkeley.edu">Matt 
-          Welsh</a> elaborates:</dd>
-        <dt> 
-          <dl> 
-            <dd>I was working on this, but it's on the back-burner right now. 
-              So, if anyone would like to help out I would appreciate it. I have 
-              a free implementation of RMI (&quot;NinjaRMI&quot;) that is quite 
-              similar to Sun's RMI. You can download it from <a href="http://www.cs.berkeley.edu/%7Emdw/proj/ninja">http://www.cs.berkeley.edu/~mdw/proj/ninja</a></dd>
-          </dl>
-        </dt>
-        <dd><a href="http://www.cs.berkeley.edu/%7Emdw/proj/ninja"></a></dd>
+        <dd> RMI code exists on the CVS trunk (aka gcc 3.1), but it
+	      has not been heavily tested.  This code was donated by
+	      Transvirtual Technologies.
+	</dd>
       </dl>
-      <blockquote> 
-        <blockquote> 
-          <p>Note that this is NOT Java RMI per se; it is just very similar in 
-            functionality and design. You might want to steal some classes out 
-            of it to get RMI support in libgcj. However, it does require some 
-            classes in java.* and sun.* which are not part of libgcj.</p>
-        </blockquote>
-        <p>It may be possible to use the JavaParty's <a href="http://wwwipd.ira.uka.de/%7Ehauma/EfficientRMI/">RMI 
-          implementation</a>, but the licensing is much more restrictive than 
-          that of NinjaRMI. Details below:</p>
-        <blockquote> 
-          <p>The much faster drop-in RMI and the appropriate efficient serialization 
-            is designed and implemented completely in Java without any native 
-            code. Moreover, the re-designed RMI supports non-TCP/IP communication 
-            networks, even with heterogeneous transport protocols. As a by-product, 
-            there is a benchmark collection for RMI. </p>
-        </blockquote>
-      </blockquote>
       <p></p>
       <dl> 
         <dt>&nbsp; </dt>
