--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -31,10 +31,10 @@ compiled/interpreted applications.
 
 <p>
 
-Most of the APIs specified by "The Java Class Libraries" Second Edition and 
-the "Java 2 Platform supplement" are supported, including collections, 
-networking, reflection, and serialization. AWT and RMI are currently 
-unsupported, but work to implement them is in progress.
+Most of the APIs specified by "The Java Class Libraries" Second
+Edition and the "Java 2 Platform supplement" are supported, including
+collections, networking, reflection, and serialization. AWT is
+currently unsupported, but work to implement it is in progress.
 
 <p>
 
@@ -70,7 +70,7 @@ href="http://www.gnu.org/software/classpath/">GNU Classpath</a>.
 <tr><td valign="top">
 <b>August 27, 2001</b>
 </td><td>
-Tom Tromey has imported an RMI implementation into libgcj.  RMI was
+Tom Tromey has imported RMI into libgcj.  This RMI implementation was
 implemented and donated to the Free Software Foundation by
 Transvirtual Technologies; many thanks to them for their important
 contribution.
