Change .ps to .ps.gz extensions. Remove links to GCC 2.95.2 docs.

--- a/htdocs/onlinedocs/index.html
+++ b/htdocs/onlinedocs/index.html
@@ -20,84 +20,61 @@
   <ul>
     <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.0.1/gcc.html">GCC
          3.0.1 Manual</a> (<a
-         href="http://gcc.gnu.org/onlinedocs/gcc-3.0.1/gcc.ps">also
+         href="http://gcc.gnu.org/onlinedocs/gcc-3.0.1/gcc.ps.gz">also
          in PostScript</a>)</li>
     <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.0.1/g77.html">G77
          0.5.26 (GCC 3.0.1) Manual</a> (<a
-         href="http://gcc.gnu.org/onlinedocs/gcc-3.0.1/g77.ps">also
+         href="http://gcc.gnu.org/onlinedocs/gcc-3.0.1/g77.ps.gz">also
          in PostScript</a>)</li>
     <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.0.1/gcj.html">GCC
          3.0.1 GCJ Manual</a> (<a
-         href="http://gcc.gnu.org/onlinedocs/gcc-3.0.1/gcj.ps">also
+         href="http://gcc.gnu.org/onlinedocs/gcc-3.0.1/gcj.ps.gz">also
          in PostScript</a>)</li>
     <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.0.1/cpp.html">GCC
          3.0.1 CPP Manual</a> (<a
-         href="http://gcc.gnu.org/onlinedocs/gcc-3.0.1/cpp.ps">also
+         href="http://gcc.gnu.org/onlinedocs/gcc-3.0.1/cpp.ps.gz">also
          in PostScript</a>)</li>
   </ul></li>
   <li>GCC 3.0 manuals:
   <ul>
     <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.0/gcc.html">GCC
          3.0 Manual</a> (<a
-         href="http://gcc.gnu.org/onlinedocs/gcc-3.0/gcc.ps">also
+         href="http://gcc.gnu.org/onlinedocs/gcc-3.0/gcc.ps.gz">also
          in PostScript</a>)</li>
     <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.0/g77.html">G77
          0.5.26 (GCC 3.0) Manual</a> (<a
-         href="http://gcc.gnu.org/onlinedocs/gcc-3.0/g77.ps">also
+         href="http://gcc.gnu.org/onlinedocs/gcc-3.0/g77.ps.gz">also
          in PostScript</a>)</li>
     <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.0/gcj.html">GCC
          3.0 GCJ Manual</a> (<a
-         href="http://gcc.gnu.org/onlinedocs/gcc-3.0/gcj.ps">also
+         href="http://gcc.gnu.org/onlinedocs/gcc-3.0/gcj.ps.gz">also
          in PostScript</a>)</li>
     <li><a href="http://gcc.gnu.org/onlinedocs/gcc-3.0/cpp.html">GCC
          3.0 CPP Manual</a> (<a
-         href="http://gcc.gnu.org/onlinedocs/gcc-3.0/cpp.ps">also
+         href="http://gcc.gnu.org/onlinedocs/gcc-3.0/cpp.ps.gz">also
          in PostScript</a>)</li>
   </ul></li>
   <li>GCC 2.95.3 manuals:
   <ul>
     <li><a href="http://gcc.gnu.org/onlinedocs/gcc-2.95.3/gcc.html">GCC
          2.95.3 Manual</a> (<a
-         href="http://gcc.gnu.org/onlinedocs/gcc-2.95.3/gcc.ps">also
+         href="http://gcc.gnu.org/onlinedocs/gcc-2.95.3/gcc.ps.gz">also
          in PostScript</a>)</li>
     <li><a href="http://gcc.gnu.org/onlinedocs/gcc-2.95.3/g77.html">G77
          0.5.25 (GCC 2.95.3) Manual</a> (<a
-         href="http://gcc.gnu.org/onlinedocs/gcc-2.95.3/g77.ps">also
+         href="http://gcc.gnu.org/onlinedocs/gcc-2.95.3/g77.ps.gz">also
          in PostScript</a>)</li>
     <li><a href="http://gcc.gnu.org/onlinedocs/gcc-2.95.3/cpp.html">GCC
          2.95.3 CPP Manual</a> (<a
-         href="http://gcc.gnu.org/onlinedocs/gcc-2.95.3/cpp.ps">also
+         href="http://gcc.gnu.org/onlinedocs/gcc-2.95.3/cpp.ps.gz">also
          in PostScript</a>)</li>
     <li><a href="http://gcc.gnu.org/onlinedocs/gcc-2.95.3/chill.html">GCC
          2.95.3 Chill Manual</a> (<a
-         href="http://gcc.gnu.org/onlinedocs/gcc-2.95.3/chill.ps">also
+         href="http://gcc.gnu.org/onlinedocs/gcc-2.95.3/chill.ps.gz">also
          in PostScript</a>)</li>
     <li><a href="http://gcc.gnu.org/onlinedocs/gcc-2.95.3/objc-features.html">GCC
          2.95.3 ObjC Features</a> (<a
-         href="http://gcc.gnu.org/onlinedocs/gcc-2.95.3/objc-features.ps">also
-         in PostScript</a>)</li>
-  </ul></li>
-  <li>GCC 2.95.2 manuals:
-  <ul>
-    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-2.95.2/gcc.html">GCC
-         2.95.2 Manual</a> (<a
-         href="http://gcc.gnu.org/onlinedocs/gcc-2.95.2/gcc.ps">also
-         in PostScript</a>)</li>
-    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-2.95.2/g77.html">G77
-         0.5.25 (GCC 2.95.2) Manual</a> (<a
-         href="http://gcc.gnu.org/onlinedocs/gcc-2.95.2/g77.ps">also
-         in PostScript</a>)</li>
-    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-2.95.2/cpp.html">GCC
-         2.95.2 CPP Manual</a> (<a
-         href="http://gcc.gnu.org/onlinedocs/gcc-2.95.2/cpp.ps">also
-         in PostScript</a>)</li>
-    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-2.95.2/chill.html">GCC
-         2.95.2 Chill Manual</a> (<a
-         href="http://gcc.gnu.org/onlinedocs/gcc-2.95.2/chill.ps">also
-         in PostScript</a>)</li>
-    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-2.95.2/objc-features.html">GCC
-         2.95.2 ObjC Features</a> (<a
-         href="http://gcc.gnu.org/onlinedocs/gcc-2.95.2/objc-features.ps">also
+         href="http://gcc.gnu.org/onlinedocs/gcc-2.95.3/objc-features.ps.gz">also
          in PostScript</a>)</li>
   </ul></li>
 </ul>
@@ -112,33 +89,33 @@ existing release.</p>
 <ul>
   <li><a href="http://gcc.gnu.org/install/">GCC Installation Instructions</a></li>
   <li><a href="http://gcc.gnu.org/onlinedocs/gcc.html">GCC Manual</a> (<a
-         href="http://gcc.gnu.org/onlinedocs/gcc.ps">also in
+         href="http://gcc.gnu.org/onlinedocs/gcc.ps.gz">also in
          PostScript</a>)</li>
   <li><a href="http://gcc.gnu.org/onlinedocs/g77.html">G77 Manual</a> (<a
-         href="http://gcc.gnu.org/onlinedocs/g77.ps">also in
+         href="http://gcc.gnu.org/onlinedocs/g77.ps.gz">also in
          PostScript</a>)</li>
   <ul> 
      <li><a href="http://gcc.gnu.org/onlinedocs/g77_news.html">G77 News</a></li>
      <li><a href="http://gcc.gnu.org/onlinedocs/g77_bugs.html">G77 Bugs</a></li>
   </ul>
   <li><a href="http://gcc.gnu.org/onlinedocs/gcj.html">GCJ Manual</a> (<a
-         href="http://gcc.gnu.org/onlinedocs/gcj.ps">also in
+         href="http://gcc.gnu.org/onlinedocs/gcj.ps.gz">also in
          PostScript</a>)</li>
   <li><a href="http://gcc.gnu.org/onlinedocs/cpp.html">CPP Manual</a> (<a
-         href="http://gcc.gnu.org/onlinedocs/cpp.ps">also in
+         href="http://gcc.gnu.org/onlinedocs/cpp.ps.gz">also in
          PostScript</a>)</li>
   <li><a href="http://gcc.gnu.org/onlinedocs/cppinternals.html">CPP
        Internals Manual</a> (<a
-         href="http://gcc.gnu.org/onlinedocs/cppinternals.ps">also in
+         href="http://gcc.gnu.org/onlinedocs/cppinternals.ps.gz">also in
          PostScript</a>)</li>
   <li><a href="http://gcc.gnu.org/onlinedocs/libstdc++/documentation.html">libstdc++-v3 Documentation</a></li>
   <li><a href="http://gcc.gnu.org/onlinedocs/porting.html">libstdc++-v3
        Porting Manual</a> (<a
-         href="http://gcc.gnu.org/onlinedocs/porting.ps">also in
+         href="http://gcc.gnu.org/onlinedocs/porting.ps.gz">also in
          PostScript</a>)</li>
   <li><a href="http://gcc.gnu.org/onlinedocs/chill.html">Chill
       Manual</a> (<a
-         href="http://gcc.gnu.org/onlinedocs/chill.ps">also in
+         href="http://gcc.gnu.org/onlinedocs/chill.ps.gz">also in
          PostScript</a>)</li>
 </ul>
 
