The project is called GCC, not gcc. Make the link to libstdc++ relative.

--- a/htdocs/gcc-3.0/features.html
+++ b/htdocs/gcc-3.0/features.html
@@ -47,7 +47,7 @@
         inter-operating with other IA-64 compilers.</li> 
     <li>The new ABI also significantly reduces the size of symbol and debug
         information.</li>
-    <li>New <a href="http://gcc.gnu.org/libstdc++/">C++ support library</a>
+    <li>New <a href="../libstdc++/">C++ support library</a>
         and many C++ bug fixes, vastly improving our conformance to the
         ISO C++ standard.</li>
     <li>New <a href="../news/inlining.html">inliner for C++</a>.</li>
@@ -83,18 +83,18 @@
     <li>HPUX 11 support contributed.</li>
     <li>Improved PowerPC code generation, including scheduled
         prologue and epilogue.</li>
-    <li>Port of gcc to Intel's IA-64 processor contributed.</li>
-    <li>Port of gcc to Motorola's MCore 210 and 340 contributed.</li>
+    <li>Port of GCC to Intel's IA-64 processor contributed.</li>
+    <li>Port of GCC to Motorola's MCore 210 and 340 contributed.</li>
     <li>New unified back-end for Arm, Thumb and StrongArm contributed.</li>
-    <li>Port of gcc to Intel's XScale processor contributed.</li>
-    <li>Port of gcc to Atmel's AVR microcontrollers contributed.</li>
-    <li>Port of gcc to Mitsubishi's D30V processor contributed.</li>
-    <li>Port of gcc to Matsushita's AM33 processor (a member
+    <li>Port of GCC to Intel's XScale processor contributed.</li>
+    <li>Port of GCC to Atmel's AVR microcontrollers contributed.</li>
+    <li>Port of GCC to Mitsubishi's D30V processor contributed.</li>
+    <li>Port of GCC to Matsushita's AM33 processor (a member
         of the MN10300 processor family) contributed.</li>
-    <li>Port of gcc to Fujitsu's FR30 processor contributed.</li>
-    <li>Port of gcc to Motorola's 68HC11 and 68HC12 processors
+    <li>Port of GCC to Fujitsu's FR30 processor contributed.</li>
+    <li>Port of GCC to Motorola's 68HC11 and 68HC12 processors
         contributed.</li>
-    <li>Port of gcc to Sun's picoJava processor core contributed.</li>
+    <li>Port of GCC to Sun's picoJava processor core contributed.</li>
   </ul></li>
   <li>Documentation improvements:
   <ul>
