--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -42,6 +42,11 @@
 </tr>
 
 <tr>
+<td>alphaev67-unknown-linux-gnu</td>
+<td>Successful</td>
+</tr>
+
+<tr>
 <td>hppa1.1-hp-hpux10.20</td>
 <td>Successful</td>
 </tr>
